<resources>
    <string name="app_name">abc</string>
    <string name="costumer">customer</string>
    <string name="store">Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">John doe</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">abc@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_re_password">Confirm your Password</string>
    <string name="txt_password_hint">Password</string>
    <string name="txt_re_password_hint">Re enter your Password</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account?<font color="#2196F3"> Login Now </font></string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to be in  Que</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="time_left">00:0 %s</string>
    <string name="default_timer">00:00</string>
    <string name="enter_the_otp_sent_on_your_email">Enter the otp sent to your Email</string>
    <string name="didn_t_receive_the_otp_resent_otp">Didn\'t receive the OTP??<font color="#2196F3"> Resent OTP </font></string>
</resources>