<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginfrag"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="32dp"
            android:paddingBottom="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/txt_login_header"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/txt_login_subheader"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/customer"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginEnd="32dp"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:text="@string/costumer"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/store"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="32dp"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:text="@string/store"
                        android:textSize="12sp"
                        />

                </RadioGroup>



            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:text="@string/txt_email"
                android:textColor="@color/black"
                android:textSize="16sp" />

          <!--  <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="4dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/txt_email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp" />
                -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="4dp"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_gray"
                    android:hint="@string/txt_email_hint"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:text="@string/txt_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

      <!--  <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="4dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/txt_password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"

                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp" />
                -->
       [     <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
           <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="4dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/txt_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp"
               />
            </com.google.android.material.textfield.TextInputLayout>]


            <TextView
                android:id="@+id/txt_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text=""
                android:textColor="@color/highlight_text_color"
                android:textSize="12sp" />
            <Button
                android:id="@+id/btn_login"
                style="@style/Widget.Material3.Button"
                android:backgroundTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/txt_login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:text="@string/txt_no_account_signup"
                android:textSize="14sp" />
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="175dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="175dp"
                android:visibility="invisible"
               />


        </LinearLayout>


    </ScrollView>

</FrameLayout>