<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".otpfrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:src="@drawable/recieved" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:text="@string/otp_verification"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:text="@string/enter_the_otp_sent_on_your_email"
            android:textColor="@color/light_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/OtpSignUp1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:digits="1234567890"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="1"
                android:paddingLeft="8dp" />

            <EditText
                android:id="@+id/OtpSignUp2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:digits="1234567890"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="1"
                android:paddingStart="8dp" />

            <EditText
                android:id="@+id/OtpSignUp3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:digits="1234567890"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="1"
                android:paddingLeft="8dp" />

            <EditText
                android:id="@+id/OtpSignUp4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:digits="1234567890"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="1"
                android:paddingLeft="8dp"
                android:src="@drawable/ic_otp_line" />

        </LinearLayout>

        <TextView
            android:id="@+id/resent_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:text="@string/didn_t_receive_the_otp_resent_otp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:gravity="center"
            android:text="00:30"
            android:textColor="#000000" />


        <Button
            android:id="@+id/verify_button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/sf_pro_display_bold"
            android:gravity="center"
            android:paddingLeft="100dp"
            android:paddingTop="12dp"
            android:paddingRight="100dp"
            android:paddingBottom="12dp"
            android:text="Verify"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:cornerRadius="32dp" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginEnd="175dp"
            android:visibility="invisible"
            />


    </LinearLayout>
</FrameLayout>